--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   src: url(./fonts/Outfit.ttf);
 }
 :root {
-  --background: #ffffff;
+  --background: #F7F2EB;
   --foreground: #292d32;
   --main-light-blue: #3874ac;
   --main-neutral-blue: #254d72;
@@ -17,6 +17,7 @@
   --main-dark-brown: #382512;
   --main-neutral-grey: #d9d9d9;
   --text-dark-color: #292d32;
+  --text-light-panel:#ffffff;
 }
 
 /* @media (prefers-color-scheme: dark) {
